src/app/global.css
body {
  margin: 0;
}
p {
  margin-bottom: 0;
}

/*padding and margin*/
.pa-40 {
  padding: 40px;
}
.pa-80 {
  padding: 80px;
}
.pa-20 {
  padding: 20px;
}
.pa-24 {
  padding: 24px;
}
.pa-16 {
  padding: 16px;
}
.pa-10 {
  padding: 10px;
}
.px-40 {
  padding-left: 40px;
  padding-right: 40px;
}
.px-16 {
  padding-left: 16px;
  padding-right: 16px;
}
.px-160 {
  padding-left: 160px;
  padding-right: 160px;
}
.px-120 {
  padding-left: 120px;
  padding-right: 120px;
}
.px-80 {
  padding-left: 80px;
  padding-right: 80px;
}
.px-28 {
  padding-left: 28px;
  padding-right: 28px;
}
.px-20 {
  padding-left: 20px;
  padding-right: 20px;
}
.px-10 {
  padding-left: 10px;
  padding-right: 10px;
}
.px-12 {
  padding-left: 12px;
  padding-right: 12px;
}
.py-80{
  padding-top: 80px;
  padding-bottom: 80px;
}
.py-200 {
  padding-top: 200px;
  padding-bottom: 200px;
}
.py-150 {
  padding-top: 150px;
  padding-bottom: 150px;
}
.py-80 {
  padding-top: 80px;
  padding-bottom: 80px;
}
.py-60 {
  padding-top: 60px;
  padding-bottom: 60px;
}
.py-40 {
  padding-top: 40px;
  padding-bottom: 40px;
}
.py-30 {
  padding-top: 30px;
  padding-bottom: 30px;
}
.py-20 {
  padding-top: 20px;
  padding-bottom: 20px;
}
.py-12 {
  padding-top: 12px;
  padding-bottom: 12px;
}
.py-8 {
  padding-top: 12px;
  padding-bottom: 12px;
}
.pt-16 {
  padding-top: 16px;
}
.pl-72 {
  padding-left: 72px;
}
.my-12 {
  margin-top: 12px;
  margin-bottom: 12px;
}
.ml-12 {
  margin-left: 12px;
}
.ml-16 {
  margin-left: 16px;
}
.mr-24 {
  margin-right: 24px;
}
.mb-46 {
  margin-bottom: 46px;
}
.mb-40 {
  margin-bottom: 40px;
}
.mb-60 {
  margin-bottom: 60px;
}
.mb-32 {
  margin-bottom: 32px;
}
.mb-80 {
  margin-bottom: 80px;
}
.mb-36 {
  margin-bottom: 36px;
}
.mb-24 {
  margin-bottom: 24px;
}
.mb-20 {
  margin-bottom: 20px;
}
.mb-16 {
  margin-bottom: 16px;
}
.mb-18 {
  margin-bottom: 18px;
}
.mb-10 {
  margin-bottom: 10px;
}
.mb-6 {
  margin-bottom: 6px;
}
.mt-60 {
  margin-top: 60px;
}
.mt-30 {
  margin-top: 30px;
}
.mt-40 {
  margin-top: 40px;
}
.ml-30 {
  margin-left: 30px;
}
.ml-8 {
  margin-left: 8px;
}
.mr-16 {
  margin-right: 16px;
}
.mr-80 {
  margin-right: 80px;
}
.mr-100 {
  margin-right: 100px;
}
.ml-18 {
  margin-left: 18px;
}
.ml-24 {
  margin-left: 24px;
}
.ml-60 {
  margin-left: 60px;
}
.mr-6 {
  margin-right: 6px;
}
.my-28 {
  margin-top: 28px;
  margin-bottom: 28px;
}

/*text-color*/
.text-9165FA{
  color: #9165FA;
}
.text-ffffff {
  color: #ffffff;
}
.text-F1ECFE {
  color: #f1ecfe;
}
.text-1F1F1F {
  color: #1f1f1f;
}
.text-595959 {
  color: #595959;
}
.text-262626 {
  color: #262626;
}
.text-763FF9 {
  color: #763ff9;
}
.text-141414 {
  color: #141414;
}
.text-0378A6 {
  color: #0378a6;
}
.text-434343 {
  color: #434343;
}
.text-8C8C8C {
  color: #8c8c8c;
}
.text-000000 {
  color: #000000;
}
.text-FE9900 {
  color: #fe9900;
}
.text-1D2026 {
  color: #1d2026;
}
.text-024864 {
  color: #024864;
}
.text-3593B8{
  color: #3593B8;
}

/*font size*/
.text-70 {
  font-size: 70px;
}
.text-48 {
  font-size: 48px;
}
.text-40 {
  font-size: 40px;
}
.text-38 {
  font-size: 38px;
}
.text-36 {
  font-size: 36px;
}
.text-26 {
  font-size: 26px;
}
.text-24 {
  font-size: 24px;
}
.text-20 {
  font-size: 20px;
}
.text-18 {
  font-size: 18px;
}
.text-16 {
  font-size: 16px;
}
.text-14 {
  font-size: 14px;
}
.text-12 {
  font-size: 12px;
}

/*background color*/
.bg-FEAD33{
  background-color: #FEAD33;
}
.bg-5F32CA {
  background-color: #5f32ca;
}
.bg-56ABFF {
  background-color: #56abff;
}
.bg-A9A8F6 {
  background-color: #a9a8f6;
}
.bg-FFBFA7 {
  background-color: #ffbfa7;
}
.bg-763FF9 {
  background-color: #763ff9;
}
.bg-FFA337 {
  background-color: #ffa337;
}
.bg-ffffff {
  background-color: #ffffff;
}
.bg-F1ECFE {
  background-color: #f1ecfe;
}
.bg-E6F1F6 {
  background-color: #e6f1f6;
}
.bg-CDE4ED {
  background-color: #cde4ed;
}
.bg-FFEBCC {
  background-color: #ffebcc;
}
.bg-FE9900 {
  background-color: #fe9900;
}
.bg-D9D9D9 {
  background-color: #d9d9d9;
}
.bg-F0F0F0 {
  background-color: #f0f0f0;
}
.bg-E4D9FE {
  background-color: #e4d9fe;
}
.bg-FEE9E8 {
  background-color: #fee9e8;
}
.bg-E8F6F1 {
  background-color: #e8f6f0;
}
.bg-FFF5E5 {
  background-color: #fff5e5;
}
.bg-D6C5FD {
  background-color: #d6c5fd;
}
.bg-red {
  background-color: red;
}
.bg-E5F2F0{
  background-color: #e5f2f0;
}
.bg-F4F4F4{
  background-color: #f4f4f4;
}
.bg-red {
  background-color: red;
}
.bg-D6C5FD {
  background-color: #D6C5FD;
}
.text-49269C {
  color: #49269C;
}


/*borders */
.border-color-763FF9 {
  border: 1px solid #763ff9;
}
.border-color-D9D9D9 {
  border: 1px solid #d9d9d9;
}
.border-none {
  border: none !important;
}

/*border radius*/
.border-radius-4 {
  border-radius: 4px;
}
.border-radius-6 {
  border-radius: 6px;
}
.border-radius-8 {
  border-radius: 8px;
}
.border-radius-10 {
  border-radius: 10px;
}
.border-radius-12 {
  border-radius: 12px;
}
.border-radius-20 {
  border-radius: 20px;
}
.border-radius-100 {
  border-radius: 100px;
}

/*font weight*/
.text-weight-400 {
  font-weight: 400;
}
.text-weight-500 {
  font-weight: 500;
}
.text-weight-600 {
  font-weight: 600;
}
.text-weight-700 {
  font-weight: 700;
}
.text-weight-800 {
  font-weight: 800;
}

/*flex box*/
.flex {
  display: flex;
}
.flex-wrap {
  flex-wrap: wrap;
}
.column {
  flex-direction: column;
}
.items-center {
  align-items: center;
}
.justify-center {
  justify-content: center;
}
.justify-between {
  justify-content: space-between;
}
.justify-around {
  justify-content: space-around;
}
.justify-start {
  justify-content: flex-start;
}
.justify-end {
  justify-content: end;
}
.items-start {
  align-items: flex-start;
}
.text-center {
  text-align: center;
}

/*cursor */
.cursor-pointer {
  cursor: pointer;
}
.cursor-not-allowed {
  cursor: not-allowed;
}

/*common*/
.full-width {
  width: 100%;
}
.fit-content {
  width: fit-content;
}
.full-height {
  height: 100%;
}
.separator-x {
  background: #d9d9d9;
  height: 1px;
  width: 100%;
}
/* ... */

